<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/main_view"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="#ffffff"
        android:id="@+id/main_activity_linear_layout"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:weightSum="1"
            >
        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.70"
            android:hint="@string/wpisz_nazw_u_ytkownika"
            android:id="@+id/profile_username_input"></EditText>

            <Button
                android:id="@+id/go_to_profile"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.30"
                android:text="@string/obejrzyj_jego_profil"
                android:textColor="@color/itemsBackground"></Button>
        </LinearLayout>
        <!-- failed matchup check
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:weightSum="1"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.70"
                android:orientation="vertical"

                >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_user1"
                android:id="@+id/user1_matchup_input"></EditText>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_user2"
                    android:id="@+id/user2_matchup_input"></EditText>
            </LinearLayout>
            <Button
                android:id="@+id/go_to_matchup"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.30"
                android:text="@string/button_check_matchup"
                android:textColor="@color/itemsBackground"></Button>
        </LinearLayout>
        -->
        <!-- classical leaderboard failed
        <Button
            android:id="@+id/go_to_classical_leaderboard"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.30"
            android:background="@color/itemsBackground"
            android:layout_marginTop="5dp"
            android:text="@string/classical_leaderboard_button" />
            -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:weightSum="1"
            >
            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.70"
                android:hint="@string/wpisz_nazw_u_ytkownika"
                android:id="@+id/rating_username_input"></EditText>

            <Button
                android:id="@+id/go_to_rating_history"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.30"
                android:layout_marginTop="5dp"
                android:text="@string/button_go_to_rating"
                android:textColor="@color/itemsBackground"></Button>
        </LinearLayout>

        <Button
            android:id="@+id/go_to_streamers"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.30"
            android:background="@color/itemsBackground"
            android:layout_marginTop="5dp"
            android:text="@string/streamerzy_online" />
        <Button
            android:id="@+id/go_to_youtube"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.30"
            android:background="@color/itemsBackground"
            android:linksClickable="true"
            android:onClick="goToYoutube"
            android:layout_marginTop="5dp"
            android:text="@string/lichess_youtube_button" />
   />
   </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>